# simple-api

./: Cargo.toml  README.MD  samconfig.toml  swagger.yaml  template.yaml
CreateMessage/: Cargo.toml
CreateMessage/src/: main.rs
GetMessages/: Cargo.toml
GetMessages/src/: main.rs
create_message/: Cargo.toml
get_messages/: Cargo.toml
get_messages/src/: main.rs
src/: main.rs
