[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.55.0"
aws-sdk-dynamodb = "^0.25.1"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.8.0"
serde = "^1.0.160"
serde_json = "^1.0.95"
serde_derive = "^1.0.160"
log = "^0.4.17"
simple_logger = "^4.1.0"
chrono = "0.4.24"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
